<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLauncher"
    tools:context=".activity.LauncherActivity">

    <ImageView
        android:id="@+id/image_view_laucher"
        android:layout_width="315dp"
        android:layout_height="235dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/image"
        android:contentDescription="@string/content_image_launcher" />

    <TextView
        android:id="@+id/text_view_launcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_laucher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/launcher_first_text"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_view_launcher2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_launcher"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/dummy_text_lorem" />

    <Button
        android:id="@+id/button_launcher"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_launcher2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/custom_button_round"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textStyle="bold" />


</RelativeLayout>